fixed overflow scroll bug

--- a/front-end/src/styles/index.scss
+++ b/front-end/src/styles/index.scss
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
 * {
   font-family: "Lato", sans-serif;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+*::-webkit-scrollbar {
+  display: none;
 }
 html {
   scroll-behavior: smooth;
